force-app/main/default/objects/NCMT_Housing_Plan__c/NCMT_Housing_Plan__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <description>NCMT Housing Plan</description>
    <label>NCMT Housing Plan</label>
    <nameField>
        <displayFormat>HP-{0000000000}</displayFormat>
        <label>NCMT Housing Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Housing Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>