force-app/main/default/objects/NCMT_Housing_Plan__c/fields/ADP_high_density_PC_s_Count__c.field-meta.xml
<CustomField>
    <fullName>ADP_high_density_PC_s_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ADP (high density PC’s) Count</description>
    <label>ADP (high density PC’s) - Stations</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>