force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Agency_Bureau_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Bureau_Code__c</fullName>
    <description>Agency Bureau Code</description>
    <label>Agency Bureau Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>