force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Auditorium_sloped_floor_Count__c.field-meta.xml
<CustomField>
    <fullName>Auditorium_sloped_floor_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Auditorium (sloped floor) Count</description>
    <label>Auditorium (sloped floor) - Seats</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>