force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Auditorium_sloped_floor_Entered_USF__c.field-meta.xml
<CustomField>
    <fullName>Auditorium_sloped_floor_Entered_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Auditorium (sloped floor) Entered USF</description>
    <label>Auditorium (sloped floor) Entered USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>