force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Average_floorplate_size__c.field-meta.xml
<CustomField>
    <fullName>Average_floorplate_size__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Average floorplate size</description>
    <label>Average floorplate size</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>