force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Building1_USF__c.field-meta.xml
<CustomField>
    <fullName>Building1_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Building1 USF</description>
    <label>Building1 USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>