force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <formula>text(Project__r.Building_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Type</label>
    <type>Text</type>
</CustomField>