force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Child_care_Count__c.field-meta.xml
<CustomField>
    <fullName>Child_care_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Child care Count</description>
    <label>Child care - Children</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>