force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Child_care_Entered_USF__c.field-meta.xml
<CustomField>
    <fullName>Child_care_Entered_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Child care Entered USF</description>
    <label>Child care Entered USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>