force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Clinics_health_units_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Clinics_health_units_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Clinics/health units Use USF</description>
    <label>Clinics/health units Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>