force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Closed_offices_Count__c.field-meta.xml
<CustomField>
    <fullName>Closed_offices_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Closed offices Count</description>
    <label>Closed offices - Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>