force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Copy_Center_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Copy_Center_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Copy Center Use USF</description>
    <label>Copy Center Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>