force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Courtroom_Bankruptcy_Count__c.field-meta.xml
<CustomField>
    <fullName>Courtroom_Bankruptcy_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Courtroom – Bankruptcy Count</description>
    <label>Courtroom – Bankruptcy - Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>