force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Courtroom_district_Ceremonial_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Courtroom_district_Ceremonial_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Courtroom - district Ceremonial Use USF</description>
    <label>Courtroom - district Ceremonial Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>