force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Courtroom_district_Standard_Count__c.field-meta.xml
<CustomField>
    <fullName>Courtroom_district_Standard_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Courtroom – district Standard Count</description>
    <label>Courtroom – district Standard - Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>