force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Courtroom_Magistrate_Count__c.field-meta.xml
<CustomField>
    <fullName>Courtroom_Magistrate_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Courtroom – Magistrate Count</description>
    <label>Courtroom – Magistrate - Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>