force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Courtroom_Magistrate_Entered_USF__c.field-meta.xml
<CustomField>
    <fullName>Courtroom_Magistrate_Entered_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Courtroom – Magistrate Entered USF</description>
    <label>Courtroom – Magistrate Entered USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>