force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Data_Center_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Data_Center_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Data Center Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>