force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Elevator_shafts__c.field-meta.xml
<CustomField>
    <fullName>Elevator_shafts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Elevator shafts</description>
    <label>Elevator shafts</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>