force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Firing_range_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Firing_range_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Firing range Use USF</description>
    <label>Firing range Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>