force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Food_service_cafeteria_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Food_service_cafeteria_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Food service (cafeteria) Use USF</description>
    <label>Food service (cafeteria) Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>