force-app/main/default/objects/NCMT_Housing_Plan__c/fields/General_storage_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>General_storage_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>General storage Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>