force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Grand_Jury_Room_Count__c.field-meta.xml
<CustomField>
    <fullName>Grand_Jury_Room_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Grand Jury Room Count</description>
    <label>Grand Jury Room - Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>