force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Grand_Jury_Room_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Grand_Jury_Room_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Grand Jury Room Use USF</description>
    <label>Grand Jury Room Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>