force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Hardened_offices_suites_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Hardened_offices_suites_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Hardened offices - suites Use USF</description>
    <label>Hardened offices - suites Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>