force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Holding_cell_Central_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Holding_cell_Central_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Holding cell - Central Use USF</description>
    <label>Holding cell - Central Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>