force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Holding_cell_Court_floors_Count__c.field-meta.xml
<CustomField>
    <fullName>Holding_cell_Court_floors_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Holding cell - Court floors Count</description>
    <label>Holding cell - Court floors - Prisoner</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>