force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Housing_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Name__c</fullName>
    <label>Housing Plan Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>