force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Housing_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Type__c</fullName>
    <label>Housing Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Fit Out</fullName>
                <default>true</default>
                <label>New Fit Out</label>
            </value>
            <value>
                <fullName>Refresh</fullName>
            </value>
            <value>
                <fullName>Renovate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>