force-app/main/default/objects/NCMT_Housing_Plan__c/fields/HousingPlanFlag__c.field-meta.xml
<CustomField>
    <fullName>HousingPlanFlag__c</fullName>
    <formula>Project__r.Housing_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HousingPlanFlag</label>
    <type>Checkbox</type>
</CustomField>