force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Joint_use_retail_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Joint_use_retail_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Joint-use, retail Use USF</description>
    <label>Joint-use, retail Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>