force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Judicial_chambers_Count__c.field-meta.xml
<CustomField>
    <fullName>Judicial_chambers_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Judicial chambers Count</description>
    <label>Judicial chambers - Judges</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>