force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Judicial_chambers_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Judicial_chambers_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Judicial chambers Use USF</description>
    <label>Judicial chambers Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>