force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Kitchen_Break_room_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Break_room_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Kitchen / Break room Use USF</description>
    <label>Kitchen / Break room Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>