force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Laboratory_Dry_electronic_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Dry_electronic_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Laboratory (Dry/electronic) Use USF</description>
    <label>Laboratory (Dry/electronic) Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>