force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Libraries_Count__c.field-meta.xml
<CustomField>
    <fullName>Libraries_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Libraries Count</description>
    <label>Libraries - Volumes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>