force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Libraries_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Libraries_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Libraries Use USF</description>
    <label>Libraries Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>