force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Light_industrial_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Light_industrial_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Light industrial Use USF</description>
    <label>Light industrial Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>