force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Locker_Shower_room_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Locker_Shower_room_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Locker / Shower room Use USF</description>
    <label>Locker / Shower room Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>