force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Main_entry_stairs__c.field-meta.xml
<CustomField>
    <fullName>Main_entry_stairs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Main entry stairs</description>
    <label>Main entry stairs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>