force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Main_Lobby__c.field-meta.xml
<CustomField>
    <fullName>Main_Lobby__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Main Lobby</description>
    <label>Main Lobby</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>