force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Mechanical_Electrical_IT__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Electrical_IT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Mechanical/Electrical/IT</description>
    <label>Mechanical/Electrical/IT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>