force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Move_Cost_Module__c.field-meta.xml
<CustomField>
    <fullName>Move_Cost_Module__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Back-end flag for Housing Plans created in the Move Cost Module</description>
    <label>Move Cost Module</label>
    <type>Checkbox</type>
</CustomField>