force-app/main/default/objects/NCMT_Housing_Plan__c/fields/NCMT_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project_ID__c</fullName>
    <formula>Project__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMT Project ID</label>
    <type>Text</type>
</CustomField>