force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Non_climate_controlled_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Non_climate_controlled_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Non-climate controlled Use USF</description>
    <label>Non-climate controlled Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>