force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Number_of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Floors__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Floors</description>
    <label>Number of Floors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>