force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Number_of_stops__c.field-meta.xml
<CustomField>
    <fullName>Number_of_stops__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of stops</description>
    <label>Number of stops</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>