force-app/main/default/objects/NCMT_Housing_Plan__c/fields/PBS_AB_Code__c.field-meta.xml
<CustomField>
    <fullName>PBS_AB_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Bureau Code</label>
    <referenceTo>PBS_AB_Code__c</referenceTo>
    <relationshipLabel>NCMT Housing Plans</relationshipLabel>
    <relationshipName>NCMT_Housing_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>