force-app/main/default/objects/NCMT_Housing_Plan__c/fields/PBS_Agency_AB_Code__c.field-meta.xml
<CustomField>
    <fullName>PBS_Agency_AB_Code__c</fullName>
    <formula>PBS_AB_Code__r.Agency_Code__c + PBS_AB_Code__r.Bureau_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AB Code</label>
    <type>Text</type>
</CustomField>