force-app/main/default/objects/NCMT_Housing_Plan__c/fields/PBS_Agency_Bureau_Name__c.field-meta.xml
<CustomField>
    <fullName>PBS_Agency_Bureau_Name__c</fullName>
    <description>PBS Agency Bureau Name</description>
    <formula>PBS_AB_Code__r.Agency_Bureau_Name__c</formula>
    <label>Agency Bureau Name</label>
    <type>Text</type>
</CustomField>