force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Physical_fitness_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Physical_fitness_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Physical fitness Use USF</description>
    <label>Physical fitness Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>