force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Private_toilets_Count__c.field-meta.xml
<CustomField>
    <fullName>Private_toilets_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Private toilets Count</description>
    <label>Private toilets - EA</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>