force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Private_toilets_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Private_toilets_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Private toilets Use USF</description>
    <label>Private toilets Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>