force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Child to Project</description>
    <label>Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>NCMT Housing Plans</relationshipLabel>
    <relationshipName>NCMT_Housing_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>