force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Project_GSF__c.field-meta.xml
<CustomField>
    <fullName>Project_GSF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Project GSF</description>
    <label>Project GSF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>