force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Rentable_Area__c.field-meta.xml
<CustomField>
    <fullName>Rentable_Area__c</fullName>
    <description>Rentable Area</description>
    <label>Rentable Area</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>