force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Restrooms__c.field-meta.xml
<CustomField>
    <fullName>Restrooms__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Restrooms</description>
    <label>Restrooms</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>