force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Secured_Storage_SCIF_Standard_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Secured_Storage_SCIF_Standard_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Secured Storage/SCIF Standard Use USF</description>
    <label>Secured Storage/SCIF Standard Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>