force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Space_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Space_Plan_Name__c</fullName>
    <description>Space Name. Concatenate Project Name with HP1</description>
    <formula>Project__r.Name &amp; &quot; - HP1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Space Plan Name</label>
    <type>Text</type>
</CustomField>