force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Stair_shafts__c.field-meta.xml
<CustomField>
    <fullName>Stair_shafts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stair shafts</description>
    <label>Stair shafts</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>