force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Structural_Area__c.field-meta.xml
<CustomField>
    <fullName>Structural_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Structural Area</description>
    <label>Structural Area</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>