force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Teleconference_Count__c.field-meta.xml
<CustomField>
    <fullName>Teleconference_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Teleconference Count</description>
    <label>Teleconference - Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>