force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Teleconference_Entered_USF__c.field-meta.xml
<CustomField>
    <fullName>Teleconference_Entered_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Teleconference Entered USF</description>
    <label>Teleconference Entered USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>