force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Tenant_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Agency_Name__c</fullName>
    <description>Tenant / Agency Name</description>
    <label>Tenant / Agency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>