force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Total_GSF__c.field-meta.xml
<CustomField>
    <fullName>Total_GSF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total GSF</description>
    <label>Total GSF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>